--- a/eclipse/.cproject
+++ b/eclipse/.cproject
@@ -70,4 +70,5 @@
 			<resource resourceType="PROJECT" workspacePath="/FlexboardBluetooth"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
 </cproject>
