--- a/FLEX-OBD/.project
+++ b/FLEX-OBD/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FlexBoardMeetsOBD</name>
+	<name>FLEX-OBD</name>
 	<comment></comment>
 	<projects>
 	</projects>
