--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ PC-OBD/Debug
 /GUI/FLEX-OBD-GUI.pro.user
 /doc/developer/Doxygen/GUI/html
 /doc/developer/Doxygen/GUI/latex
+/doc/user/*.aux
+/doc/user/*.log
+/doc/user/*.out
+/doc/user/*.pdf
+/doc/user/*.synctex.gz
