Ignored the FLEX-OBD-LCD gitignores and updated FLEX-OBD-LCD project name.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-FLEX-OBD/Debug
-PC-OBD/Debug
+/FLEX-OBD/Debug
+/FLEX-OBD-LCD/Debug
+/PC-OBD/Debug
 /GUI/FLEX-OBD-GUI.pro.user
 /doc/developer/Doxygen/GUI/html
 /doc/developer/Doxygen/GUI/latex
