--- a/FLEX-OBD-LCD/.project
+++ b/FLEX-OBD-LCD/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FLEX-OBD</name>
+	<name>FLEX-OBD-LCD</name>
 	<comment></comment>
 	<projects>
 	</projects>
