Removed doc/developer junk data.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
 /FLEX-OBD/Debug
+
 /FLEX-OBD-LCD/Debug
+
 /PC-OBD/Debug
+
 /GUI/FLEX-OBD-GUI.pro.user*
+
 /FLEX-SIMULATOR/SerialFlexSimulator.pro.user*
+
 /doc/developer/Doxygen/GUI/html
 /doc/developer/Doxygen/GUI/latex
+
 /doc/user/*.aux
 /doc/user/*.log
 /doc/user/*.out
 /doc/user/*.pdf
 /doc/user/*.synctex.gz
+
+/doc/developer/*.aux
+/doc/developer/*.log
+/doc/developer/*.out
+/doc/developer/*.pdf
+/doc/developer/*.synctex.gz
